src/components/Menu/Menu.scss
@import '../../assets/fonts/pixelart.css';

.Menu {
  width: 50%;
  background: #000;
  color: white;
  padding: 10px;
  box-shadow:
    4px 0 white,
    -4px 0 white,
    0 -4px white,
    0 4px white;
  font-family: 'PixelArt';
  opacity: 1;
  margin: auto auto;
  text-align: center;
  padding: 40px;
  overflow: auto;

  h1 {
    margin: 0 0 40px 0;
    padding: 0;
    animation: fadeOut 1s ease-in-out 0s infinite alternate;
  }

  .button, .button:focus {
    width: 80%;
    padding: 15px 0px;
    background: #333;
    box-shadow:
      2px 0 white,
      -2px 0 white,
      0 -2px white,
      0 2px white;
    border: none;
    margin-bottom: 30px;
    color: #fff;
    font-family: 'PixelArt';
    outline: none;
  }
}

.keyboard {
  display: table;
  width: 100%;
  border-spacing: 25px;

  &__row {
    display: table-row;
  }

  &__option {
    width: 50%;
    display: table-cell;
  }

  &__button, &__button:focus {
    width: 33%;
    display: table-cell !important;
    background: #333;
    box-shadow:
      2px 0 white,
      -2px 0 white,
      0 -2px white,
      0 2px white;
    border: none;
    color: #fff;
    font-family: 'PixelArt';
    outline: none;
    margin-right: 10%;
  }
}

@keyframes fadeOut {
  0% {
      opacity: 1;
  }

  100% {
      opacity: 0.5;
  }
}

